--- a/payslip_generation_system/templates/includes/footer.html
+++ b/payslip_generation_system/templates/includes/footer.html
@@ -1,16 +1,19 @@
-<footer class="footer bg-light text-center py-3">
-    <strong>Copyright &copy; 2025 <a target="_blank" href="https://ncr.denr.gov.ph/">DENR NCR</a>.</strong>
-        All rights reserved.
+<footer class="main-footer bg-light">
+  <div class="text-muted">
+    <strong>
+      &copy; 2025 
+      <a target="_blank" href="https://ncr.denr.gov.ph/" class="text-success">DENR NCR</a>
+    </strong>
     <div class="float-right d-none d-sm-inline-block">
-      <b>Version</b> 2.0.1
+      <b>Version</b> 0.9 - beta
     </div>
-    <script>
-  
-        window.onbeforeunload = function () { $('#loading').show(); }
-    
-        $( document ).ready(function() {
-            $('#loading').hide();
-        });
-    </script>
-
+  </div>
 </footer>
+
+<script>
+    window.onbeforeunload = function () { $('#loading').show(); }
+
+    $( document ).ready(function() {
+        $('#loading').hide();
+    });
+</script>
