--- a/payslip_generation_system/templates/includes/navbar.html
+++ b/payslip_generation_system/templates/includes/navbar.html
@@ -22,83 +22,81 @@
     </nav>
     <!-- /.navbar -->
   
-    <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-      <!-- Brand Logo -->
-      
-      <link rel="icon" href="{% static 'images/denr-logo.png' %}">
-      <a href="{% url 'dashboard' %}" class="brand-link">
-        <img src="{% static 'images/denr-logo.png' %}" alt="Logo" class="brand-image "
-             style="opacity: .8">
-        <span class="brand-text font-weight-light" style="font-size:14px">DENR NCR - PayGeS</span>
-      </a>
-  
-      <!-- Sidebar -->
-      <div class="sidebar">
-       
-        <!-- Sidebar Menu -->
-        <nav class="mt-2">
-          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">  
-  
-              <li class="nav-item">
-              <a href="{% url 'index' %}" class="nav-link">
-                  <i class="nav-icon fas fa-arrow-left"></i>
-                  <p>
-                    Logout
-                  </p>
-                </a>
-              </li>
-  
-              {% if request.session.user_type != 'employee' %}
-                <li class="nav-item">
-                  <a href="{% url 'dashboard' %}" class="nav-link">
-                  <i class="nav-icon fa fa-dashboard"></i>
-                    <p>Dashboard</p>
-                  </a>
-                </li>
-    
-    
-                <li class="nav-item">
-                  <a href="{% url 'add_employee_profile' %}" class="nav-link">
-                  <i class="nav-icon fa fa-users"></i>
-                    <p>Add Employee Profile</p>
-                  </a>
-                </li>
-              {% endif %}
-              <li class="nav-item">
-                <a href="{% url 'payslip' %}" class="nav-link">
-                <i class="nav-icon fa fa-address-card"></i>
-                  <p>Payslip</p>
-                </a>
-              </li>
-  
-                
-              </li>
-            
-              
-          </ul>
-        </nav>
-        <!-- /.sidebar-menu -->
-      </div>
-      <!-- /.sidebar -->
-    </aside>
+  <!-- Main Sidebar Container -->
+  <aside class="main-sidebar sidebar-dark-success elevation-4">
 
-    <script>
-      $(document).on('click', '#tcpBtn', function() {
-        $.ajax({
-            type: "POST",
-            url: '/get_session/', // URL to the controller
-            dataType: 'json',  // Expect a JSON response
-            success: function(response) {
-                if (response.status === 'success') {
-                    window.location.href = "https://denrncrsys.online:8003/?session_id=" + response.session_id;
-                } else {
-                    alert('Please Login again.');
-                    window.location.href = "{% url 'index' %}";
+    <!-- Brand Logo -->
+    <a href="{% url 'dashboard' %}" class="brand-link">
+      <img src="{% static 'images/denr-logo.png' %}" alt="DENR Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <span class="brand-text font-weight-light">Payslip Generator</span>
+    </a>
 
-                }
-            }
-          });
+    <!-- Sidebar -->
+    <div class="sidebar">
 
-    });
-    </script>
+      <!-- Sidebar Menu -->
+      <nav class="mt-2">
+        <ul class="nav nav-pills nav-sidebar flex-column"
+            data-widget="treeview" role="menu" data-accordion="false">
+
+          <!-- Admin -->
+          {% if request.session.user_type != 'employee' %}
+          <li class="nav-item">
+            <a href="{% url 'dashboard' %}"
+              class="nav-link {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
+              <i class="nav-icon fa-solid fa-chart-simple"></i>
+              <p>Dashboard</p>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="{% url 'add_employee_profile' %}"
+              class="nav-link {% if request.resolver_match.url_name == 'add_employee_profile' %}active{% endif %}">
+              <i class="nav-icon fas fa-users"></i>
+              <p>Add Employee Profile</p>
+            </a>
+          </li>
+          {% endif %}
+
+          <!-- Payslip -->
+          <li class="nav-item">
+            <a href="{% url 'payslip' %}"
+              class="nav-link {% if request.resolver_match.url_name == 'payslip' %}active{% endif %}">
+              <i class="nav-icon fas fa-address-card"></i>
+              <p>Payslip</p>
+            </a>
+          </li>
+
+          <!-- Logout -->
+          <li class="nav-item">
+            <a href="{% url 'index' %}" class="nav-link">
+              <i class="nav-icon fas fa-sign-out-alt"></i>
+              <p>Logout</p>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <!-- /.sidebar-menu -->
+    </div>
+    <!-- /.sidebar -->
+  </aside>
+
+
+<script>
+$(document).on('click', '#tcpBtn', function() {
+  $.ajax({
+    type: "POST",
+    url: '/get_session/', // URL to the controller
+    dataType: 'json',  // Expect a JSON response
+    success: function(response) {
+      if (response.status === 'success') {
+          window.location.href = "https://denrncrsys.online:8003/?session_id=" + response.session_id;
+      } else {
+          alert('Please Login again.');
+          window.location.href = "{% url 'index' %}";
+
+      }
+    }
+  });
+});
+</script>
